Organizando a separação do codigo

--- a/Formação front_end/HTML5 e CSS3 parte 1: A primeira página da Web/Aula002/index.html
+++ b/Formação front_end/HTML5 e CSS3 parte 1: A primeira página da Web/Aula002/index.html
@@ -3,22 +3,34 @@
 <!DOCTYPE html>
 
 <!-- Indica oque está dentro do html -->
-<html>
+<html lang="pt-BR">
 
-    <!-- <h1></h1> ==== é para titulo e possui 6 niveis -->
-    <h1>a Barbearia Alura</h1>
+    <!-- Cabeça do arquivo  -->
+    <!-- Aqui vão as informaçãoes que serão enviadas para pagina (instruções) -->
+    <head>
+        <title>Barbearia Alura</title>
+        <meta charset="UTF-8">  
+    </head>
 
-    <!-- <p></p> === é para paragrafo -->
-    <!-- <strong></strong> === para deixar em negrito-->
-    <p>no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para 
-        o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista 
-        novos clientes a cada dia.</p>
+    <!-- Corpo da pagina -->
+    <!-- Aqui vai o conteudo que sera mostrado na pagina. -->
+    <body>
+         <!-- <h1></h1> ==== é para titulo e possui 6 niveis -->
+        <h1>a Barbearia Alura</h1>
 
-    <!-- <em></em> === para deixar em italico -->
-    <p><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
-    <!-- <p></p> === é um paragrafo-->
-    <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento 
-    possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+        <!-- <p></p> === é para paragrafo -->
+        <!-- <strong></strong> === para deixar em negrito-->
+        <p>no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para 
+            o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista 
+            novos clientes a cada dia.</p>
+
+        <!-- <em></em> === para deixar em italico -->
+        <p><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+        <!-- <p></p> === é um paragrafo-->
+        <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento 
+        possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+
+    </body>
 
 </html>
 
