--- a/Formação front_end/HTML5 e CSS3 parte 2: Posicionamento, listas e navegação/Aula001/produtos.html
+++ b/Formação front_end/HTML5 e CSS3 parte 2: Posicionamento, listas e navegação/Aula001/produtos.html
@@ -8,6 +8,13 @@
     </head>
 
     <body>
-        
+        <header>
+            <h1><img src="./imagens/logo.png"></h1>
+            <ul>
+                <li>Home</li>
+                <li>Produtos</li>
+                <li>Contatos</li>
+            </ul>
+        </header>
     </body>
 </html>
