Adicionando tabela e estilos

--- a/Formação front_end/HTML5 e CSS3 parte 3: Trabalhando com formulários e tabelas/Aula005/contato.html
+++ b/Formação front_end/HTML5 e CSS3 parte 3: Trabalhando com formulários e tabelas/Aula005/contato.html
@@ -76,6 +76,33 @@
                 <!-- submit  seria como o botão de enviar/confirmar -->
                 <input type="submit" value="Enviar Formulário" class="enviar">
             </form>
+            <!-- para criar tabelas -->
+            <table>
+                <!-- cabeçalho da tabela -->
+                <thead>
+                    <!-- <tr></tr>  são linhas-->
+                    <tr>
+                        <!-- <th></th>  são paragragos-->
+                        <th>Dia</th>
+                        <th>Horário</th>
+                    </tr>
+                </thead>
+                <!-- corpo da tabela -->
+                <tbody>
+                    <tr>
+                        <td>Segunda</td>
+                        <td>8h ~ 20h</td>
+                    </tr>
+                    <tr>
+                        <td>Quarta</td>
+                        <td>8h ~ 20h</td>
+                    </tr>
+                    <tr>
+                        <td>Sexta</td>
+                        <td>8h ~ 20h</td>
+                    </tr>
+                </tbody>
+            </table>
         </main>
         <!-- Rodapé, onnde fica o conteúdo inferior da página -->
         <footer>
