Organizando o codigo, padronizando as paginas

--- a/Formação front_end/HTML5 e CSS3 parte 4: Avançando no CSS/Aula005/src/pages/ product/produtos.html
+++ b/Formação front_end/HTML5 e CSS3 parte 4: Avançando no CSS/Aula005/src/pages/ product/produtos.html
@@ -10,8 +10,10 @@
         <!-- titulo da pagina -->
         <title>Produtos - Barbearia Alura</title>
         <!-- importando as configurações de aparencia do CSS -->
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../../../reset.css">
+        <link rel="stylesheet" href="../../../style.css">
+        <link rel="stylesheet" href="styles-produtos.css">
+
     </head>
 
     <!-- informações que serão mostradas. -->
@@ -19,15 +21,15 @@
         <header>
             <div class="caixa">
                 <!-- importando uma imagem -->
-                <h1><img src="./imagens/logo.png"></h1>
+                <h1><img src="../../../imagens/logo.png"></h1>
                 <!-- nav === para itens de navegação. -->
                 <nav>
                     <ul>
                         <!-- lista não ordenada -->
                         <!-- <a></a>  === serve para colocar um link para outra pagina -->
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="produtos.html">Produtos</a></li>
-                        <li><a href="contato.html">Contatos</a></li>
+                        <li><a href="../home/index.html">Home</a></li>
+                        <li><a href="../ product/produtos.html">Produtos</a></li>
+                        <li><a href="../ contact/contato.html">Contatos</a></li>
                     </ul>
                 </nav>
             </div>
@@ -38,19 +40,19 @@
             <ul class="produtos">
                 <li>
                     <h2>Cabelo</h2>
-                    <img src="./imagens/cabelo.jpg">
+                    <img src="../../../imagens/cabelo.jpg">
                     <p class="produto-descricao">Na tesoura ou na máquina, como o cliente preferir</p>
                     <p class="produto-preco">R$ 25,00</p>
                 </li>
                 <li>
                     <h2>Barba</h2>
-                    <img src="./imagens/barba.jpg">
+                    <img src="../../../imagens/barba.jpg">
                     <p class="produto-descricao">Corte e desenho profissional de barba</p>
                     <p class="produto-preco">R$ 18,00</p>
                 </li> 
                 <li>
                     <h2>Cabelo + Barba</h2>
-                    <img src="./imagens/cabelo+barba.jpg">
+                    <img src="../../../imagens/cabelo+barba.jpg">
                     <p class="produto-descricao">Pacote completo de cabelo e barba</p>
                     <p class="produto-preco">R$ 35,00</p>
                 </li> 
@@ -58,7 +60,7 @@
         </main>
         <!-- Rodapé, onnde fica o conteúdo inferior da página -->
         <footer>
-            <img src="./imagens/logo-branco.png">
+            <img src="../../../imagens/logo-branco.png">
             <p class="copyright">&copy; Copyright Barbearia Alura - 2020</p>
         </footer>
     </body>
