--- a/Formação front_end/HTML5 e CSS3 parte 4: Avançando no CSS/Aula005/src/pages/home/index.html
+++ b/Formação front_end/HTML5 e CSS3 parte 4: Avançando no CSS/Aula005/src/pages/home/index.html
@@ -13,9 +13,8 @@
         <meta charset="UTF-8"> 
         <meta name="viewport" content="width=device-width"> 
         <!-- serve para importar as configuraçãoes feitas em outro arquivo -->
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="style.css">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="../../../reset.css">
+        <link rel="stylesheet" href="../../../style.css">
 
     </head>
 
@@ -26,22 +25,22 @@
         <header>
             <div class="caixa">
                 <!-- importando uma imagem -->
-                <h1><img src="./imagens/logo.png"></h1>
+                <h1><img src="../../../imagens/logo.png"></h1>
                 <!-- nav === para itens de navegação. -->
                 <nav>
                     <ul>
                         <!-- lista não ordenada -->
                         <!-- <a></a>  === serve para colocar um link para outra pagina -->
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="produtos.html">Produtos</a></li>
-                        <li><a href="contato.html">Contatos</a></li>
+                        <li><a href="../home/index.html">Home</a></li>
+                        <li><a href="../ product/produtos.html">Produtos</a></li>
+                        <li><a href="../ contact/contato.html">Contatos</a></li>
                     </ul>
                 </nav>
             </div>
         <!-- Cabeçalho, onde fica o conteúdo superior da pagina -->
         </header>
         <!-- para poder adicionar uma imagem -->
-        <img class="banner" src="./imagens/banner.jpg">
+        <img class="banner" src="../../../imagens/banner.jpg">
 
         <main>
 
@@ -50,7 +49,7 @@
                 <!-- <h1></h1> ==== é para titulo e possui 6 niveis -->
                 <h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
 
-                <img class="utensilios" src="./imagens/utensilios.jpg" alt="utensilios da barbearia">
+                <img class="utensilios" src="../../../imagens/utensilios.jpg" alt="utensilios da barbearia">
                 <!-- <p></p> === é para paragrafo -->
                 <!-- <strong></strong> === para deixar em negrito-->
                 <p>No coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para 
@@ -85,7 +84,7 @@
                         <li class="itens">Profissionais Qualificados</li>
                         <li class="itens">Pontualidade</li>
                         <li class="itens">Limpeza</li>
-                    </ul><img class="imagem-beneficios" src="./imagens/beneficios.jpg">
+                    </ul><img class="imagem-beneficios" src="../../../imagens/beneficios.jpg">
                 </div>
                 <div class="video">
                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/eb5T4wqTZRk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -93,7 +92,7 @@
             </section>
         </main>
         <footer>
-            <img src="./imagens/logo-branco.png">
+            <img src="../../../imagens/logo-branco.png">
             <p class="copyright">&copy; Copyright Barbearia Alura</p>
         </footer>
 
