--- a/Formação front_end/HTML5 e CSS3 parte 4: Avançando no CSS/Aula005/src/pages/ contact/contato.html
+++ b/Formação front_end/HTML5 e CSS3 parte 4: Avançando no CSS/Aula005/src/pages/ contact/contato.html
@@ -10,8 +10,9 @@
         <!-- titulo da pagina -->
         <title>Contato - Barbearia Alura</title>
         <!-- importando as configurações de aparencia do CSS -->
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../../../reset.css">
+        <link rel="stylesheet" href="../../../style.css">
+        <link rel="stylesheet" href="style-contato.css">
     </head>
 
     <!-- informações que serão mostradas. -->
@@ -19,15 +20,15 @@
         <header>
             <div class="caixa">
                 <!-- importando uma imagem -->
-                <h1><img src="./imagens/logo.png" alt="Logo da Barbearia Alura"></h1>
+                <h1><img src="../../../imagens/logo.png" alt="Logo da Barbearia Alura"></h1>
                 <!-- nav === para itens de navegação. -->
                 <nav>
                     <ul>
                         <!-- lista não ordenada -->
                         <!-- <a></a>  === serve para colocar um link para outra pagina -->
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="produtos.html">Produtos</a></li>
-                        <li><a href="contato.html">Contatos</a></li>
+                        <li><a href="../home/index.html">Home</a></li>
+                        <li><a href="../ product/produtos.html">Produtos</a></li>
+                        <li><a href="../ contact/contato.html">Contatos</a></li>
                     </ul>
                 </nav>
             </div>
@@ -107,7 +108,7 @@
         <!-- Rodapé, onnde fica o conteúdo inferior da página -->
         <footer>
             <!-- alt   seria uma forma de descrever oq é aquela imagem -->
-            <img src="./imagens/logo-branco.png" alt="Logo da Barbearia Alura">
+            <img src="../../../imagens/logo-branco.png" alt="Logo da Barbearia Alura">
             <p class="copyright">&copy; Copyright Barbearia Alura - 2020</p>
         </footer>
     </body>
